--- a/beauty-app/src/app/pages/login/login.page.html
+++ b/beauty-app/src/app/pages/login/login.page.html
@@ -47,7 +47,7 @@
             <a routerLink="/register" class="reg">Create an Account</a>
           </ion-col>
           <ion-col size='12' class="ion-text-center">
-            <a routerLink="/terms" class="reg">Terms And Conditions</a>
+            <!-- <a routerLink="/terms" class="reg">Terms And Conditions</a> -->
           </ion-col>
         </ion-row>
       </ion-col>
