--- a/beauty-app/src/app/components/menu/menu.component.html
+++ b/beauty-app/src/app/components/menu/menu.component.html
@@ -4,12 +4,12 @@
       <ion-grid>
         <ion-row>
           <ion-col class="content-user" size="12">
-            <img (click)="redirect()" class="center img-user" src="assets/img/PROFILEPICTURE.png">
+            <img (click)="redirect()" class="center img-user" src="assets/img/no-profile.png">
             <h4 class="margins">{{name}} </h4>
             <h6 class="margins link">https://beautylab.com.co</h6>
             <p class="bl-points">
               B L P o i n t s <br>
-              100
+              0
              </p>
             <img (click)="redirect()" class="center bl-logo" src="assets/logoBL/whiteLogoV.png" alt="">
           </ion-col>
