--- a/beauty-app/src/global.scss
+++ b/beauty-app/src/global.scss
@@ -33,7 +33,7 @@ ion-content.background-bl {
 }
 
 ion-content{
-  --background: linear-gradient(180deg, #dc4af5 0%, #9c27b0 90%, #d600fa 100%);
+  --background: linear-gradient(180deg, rgb(174, 25, 255) 0%, rgb(43, 58, 221) 90%, rgb(74, 68, 197) 100%);
 
 }
 
