--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -14,14 +14,14 @@
           <img class="img-logo" src="assets/logoBL/whiteLogoH.png" alt="" routerLink="/tabs/home">
         </div>
         <h3 class="ion-text-center">B u y N o w</h3>
-        <img class="img-depos" src="assets/img/pyp/3dplan.jpg" alt="" srcset="">
+        <img class="img-depos" src="assets/img/pyp/{{plans.img_plan}}" alt="" srcset="">
         <p></p>
 
           <ion-grid fixed *ngIf="this.hero.dataPurchase.plans.length > 0" >
             <ion-row>
               <ion-col size="12" size-lg="6" size-md="4" size-xl="6" >
                 <ion-text color="light">
-                  <h3 class="ion-text-center textCss">Details Plan</h3>
+                  <h3 class="ion-text-center textCss"> D e t a i l s  P l a n</h3>
                 </ion-text>
               </ion-col>
               <ion-col size="6" size-lg="3" size-md="4" size-xl="3" class="grid-border">
