--- a/beauty-app/src/app/pages/plans/plans.page.scss
+++ b/beauty-app/src/app/pages/plans/plans.page.scss
@@ -2,6 +2,8 @@ img.plans{
     border-radius: 1em;
     margin: 0 auto;
     width: 100%;
+    border: solid #fff 0.1em;
+    padding: 0.3em;
 }
 
 h1.home{
