--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -1,7 +1,8 @@
-h1{
-        font-family: 'bioliquidregular';
-        font-size:33px;
-        color:aliceblue;
-        text-align: center ;
-        padding-top: 10rem;
-       }
+.card-social{
+        --background:white;
+        margin-inline-end: -10px;
+        margin-inline-start: -10px;
+}
+.img-social{
+        
+}
