--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,4 +1,31 @@
 <app-header></app-header>
 <ion-content>
-<h1> COMING SOON </h1>
+<ion-grid>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
+    <ion-row>
+        <ion-col *ngFor="let post of cards" size="12" size-sm="12" size-md="4" size-lg="4">
+        <ion-card class="card-social">
+            <ion-card-header>
+                <ion-grid>
+                    <ion-row>
+                        <ion-col size="2">
+                            <ion-avatar>
+                            <img src="../../../assets/img/{{post.profileimg}}">
+                            </ion-avatar>
+                        </ion-col>
+                        <ion-col size="10">
+                             <h2>{{post.user}}</h2>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-card-header>
+            <ion-card-content>
+                <img src="../../../assets/img/{{post.images}}">
+            </ion-card-content>
+        </ion-card>
+        </ion-col>
+    </ion-row>
+</ion-grid>
 </ion-content>
