--- a/beauty-app/src/app/pages/profile/profile.page.scss
+++ b/beauty-app/src/app/pages/profile/profile.page.scss
@@ -1,6 +1,8 @@
 .profile-img {
-    height: 50%;
-    width: 25%;
+    height: 100px;
+    width: 100px;
+    display: flex;
+    margin: 0 auto; 
 }
 
 .content-img {
