--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -33,7 +33,7 @@
                                 </ion-col>
 
                                 <ion-col size="1">
-                                    <ion-icon
+                                    <ion-icon (click)='presentPopover($event)'
                                         class="icon-more"
                                         name="md-more"
                                     ></ion-icon>
