--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -28,6 +28,7 @@
         <app-profile-data *ngIf="content=='personalData'"></app-profile-data>
         <app-profile-photos *ngIf="content=='photos'"></app-profile-photos>
         <app-profile-review-blog *ngIf="content=='reviewBlog'"></app-profile-review-blog>
+        <ion-button (click)="test()" >Test</ion-button> 
       </ion-col>
       <ion-col size="0" size-md="2" size-lg="3"></ion-col>
     </ion-row>
