--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -1,6 +1,6 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 
-<ion-content class="ion-padding">
+<ion-content fullscreen>
     <ion-grid fixed>
         <ion-row>
             <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
@@ -16,12 +16,20 @@
 
 
 
-<ion-grid fixed *ngIf="plans">
+<ion-grid *ngIf="plans">
     <ion-row *ngFor="let data of plans" (click)="getDetail(data)">
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <img src="assets/img/pyp/{{data.img_plan}}" class="plans">
-
+            <ion-card color="light">
+                <img src="assets/img/pyp/{{data.img_plan}}" class="plans">
+                <ion-card-header>
+                  <ion-card-subtitle></ion-card-subtitle>
+                  <ion-card-title>{{data.nombre}}</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  {{data.descripcion}}
+                </ion-card-content>
+              </ion-card>
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
     </ion-row>
