--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -52,6 +52,9 @@ ion-card{
 .line-right{
         border-right:#DADADA 1px solid;
 }
+.line-up{
+        border-top: #DADADA 1px solid;
+}
 .avatar-social{
         width: 45px;
         height: 45px;
