--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -49,7 +49,6 @@
                                     class="img-post"
                                     src="../../../assets/img/{{post.images}}"
                                 >
-
                                 <ion-col
                                     size="2"
                                     class="line-right"
@@ -66,7 +65,25 @@
                                 <ion-col size="10">
                                     <h1 class="tinytext">{{post.postext}}</h1>
                                 </ion-col>
-                            </ion-row>
+                                <ion-col size='12'>
+                                   <div class="line-up">
+                                    <p><strong>Miguel angel </strong>{{post.topcomnt}}</p>
+                                   </div>
+                                    <div class="ion-text-right line-up">
+                                        <p><strong>
+                                        Andres felipe
+                                        </strong>
+                                        happy travel have fun
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <ion-title class="ion-text-center tinytext line-up"> 
+                                            show more
+                                        </ion-title>
+                                    </div>
+
+                            </ion-col>
+                                </ion-row>
                         </ion-grid>
                     </ion-card-content>
                 </ion-card>
