--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -1,6 +1,6 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 
-<ion-content fullscreen>
+<ion-content fullscreen no-padding>
     <ion-grid fixed>
         <ion-row>
             <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
@@ -26,9 +26,6 @@
                   <ion-card-subtitle></ion-card-subtitle>
                   <ion-card-title>{{data.nombre}}</ion-card-title>
                 </ion-card-header>
-                <ion-card-content>
-                  {{data.descripcion}}
-                </ion-card-content>
               </ion-card>
         </ion-col>
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
