--- a/beauty-app/src/app/components/menu/menu.component.html
+++ b/beauty-app/src/app/components/menu/menu.component.html
@@ -4,7 +4,11 @@
       <ion-grid>
         <ion-row>
           <ion-col class="content-user" size="12">
-            <img (click)="redirect()" class="center img-user" [src]="imgPerfil === null ? 'assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + imgPerfil">
+            <ion-menu-toggle>
+            <ion-avatar class="center" routerLink="/profile">
+              <img [src]="hero.getUser().img_perfil === null ? 'assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + hero.getUser().img_perfil" class="img-profile">
+            </ion-avatar>
+          </ion-menu-toggle>
             <h4 class="margins">{{name}} </h4>
             <h6 class="margins link">https://beautylab.com.co</h6>
             <p class="bl-points">
