--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -124,7 +124,7 @@
         <ion-button expand="block" class="button-pay" (click)="payWithPaypal()">Make Deposit</ion-button>
         <ion-row>
           <ion-col size="6">
-            <ion-button color="medium" expand="block">Cancel <ion-icon class="ion-float-right" name="close"></ion-icon>
+            <ion-button color="medium" expand="block" (click)="cancel()">Cancel <ion-icon class="ion-float-right" name="close"></ion-icon>
             </ion-button>
             </ion-col>
             <ion-col size="6">
