--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -32,7 +32,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="10" >
-        <ion-button type='submit'class='button-contact'>
+        <ion-button type='submit'class='button-contact' routerLink="/admplans">
           Send
         </ion-button>
         </ion-col>
