--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -1,13 +1,13 @@
 <app-header titulo="BeautyLab Plans"></app-header>
 
-<ion-content fullscreen no-padding>
+<ion-content>
     <ion-grid fixed>
         <ion-row>
             <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
             <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
                 <ion-text color="light">
                     <h1 class="ion-text-center home">P L A N S</h1>
-                    <h3 class="ion-text-center textCss">These are Our Plans</h3>
+                    <h2 class="ion-text-center textCss">These are Our Plans</h2>
                   </ion-text>
             </ion-col>
             <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
@@ -24,7 +24,7 @@
                 <img src="assets/img/pyp/{{data.img_plan}}" class="plans">
                 <ion-card-header>
                   <ion-card-subtitle></ion-card-subtitle>
-                  <ion-card-title>{{data.nombre}}</ion-card-title>
+                  <ion-card-title class="ion-text-center">{{data.nombre}}</ion-card-title>
                 </ion-card-header>
               </ion-card>
         </ion-col>
