--- a/beauty-app/src/app/pages/admplans/admplans.page.html
+++ b/beauty-app/src/app/pages/admplans/admplans.page.html
@@ -36,8 +36,8 @@
             <ion-input type="file" class="input-contact"></ion-input>
           </ion-item>
           <ion-item>
-            <ion-button color="dark" expand="full" size="large">Guardar</ion-button>
-            <ion-button color="dark" expand="full" size="large">Ver</ion-button>
+            <ion-button color="dark" expand="full" size="large">Save</ion-button>
+            <ion-button color="dark" expand="full" size="large" routerLink="/admplansdetails">Details</ion-button>
           </ion-item>
         </ion-list>
       </ion-col>
