--- a/beauty-app/src/app/pages/profile/profile.page.scss
+++ b/beauty-app/src/app/pages/profile/profile.page.scss
@@ -1,6 +1,18 @@
+ion-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 body{
     -webkit-user-select: text;
     user-select: text;
+}
+.center{
+    display: flex;
+    margin: auto auto;
+}
+.padd-top{
+    padding-top: 0.5rem;
 }
 .profile-img {
     height: 100px;
