--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <ion-content fullscream>
-  <div *ngIf="loading" class="padd-top loading center">
+  <div *ngIf="loading" class="mar-top loading center">
     <div class="ldio-0crlo2y4m0zh">
       <div></div>
       <div></div>
