--- a/beauty-app/src/app/pages/profile/profile.page.scss
+++ b/beauty-app/src/app/pages/profile/profile.page.scss
@@ -1,8 +1,3 @@
-ion-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 body{
     -webkit-user-select: text;
     user-select: text;
@@ -11,8 +6,8 @@ body{
     display: flex;
     margin: auto auto;
 }
-.padd-top{
-    padding-top: 0.5rem;
+.mar-top{
+    margin-top: 1.5rem;
 }
 .profile-img {
     height: 100px;
