--- a/beauty-app/src/app/pages/admplans/admplans.page.html
+++ b/beauty-app/src/app/pages/admplans/admplans.page.html
@@ -21,7 +21,7 @@
         <form [formGroup]="form" (ngSubmit)="savePlans(form.value)">
           <ion-list lines="full" class="ion-no-margin ion-no-padding">
             <ion-item>
-              <ion-label position="stacked" class="txt-label">Plan Name</ion-label>
+              <ion-label position="stacked" class="txt-label">Plan Name:</ion-label>
               <ion-input formControlName="nombre" type="text" name="nombre" 
                 class="input-contact"
                 [ngClass]="{ 'is-invalid': submitted && f.title.errors }"></ion-input>
@@ -30,16 +30,18 @@
               </div>                
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Description Plan</ion-label>
+              <ion-label position="stacked">Description Plan:</ion-label>
               <ion-input formControlName="descripcion" type="text" name="descripcion" class="input-contact"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Plan Value</ion-label>
+              <ion-label position="stacked">Plan Value:</ion-label>
               <ion-input formControlName="valor"  [formGroup]="form"  type="text" name="valor" class="input-contact"></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Plan Name</ion-label>
-              <ion-input [formGroup]="form"  type="file" class="input-contact"></ion-input>
+              <ion-label position="stacked">Room Type:</ion-label>
+              <select name="idDepartamento" formControlName="roomType" class="form-control col-md-6" >
+                <option *ngFor="let item of roomsType" value={{item.idTipoHabitacion}} >{{item.nombre}}</option>
+              </select> 
             </ion-item>
             <ion-item>
               <ion-button type="submit" color="dark" expand="full" size="large">Save</ion-button>
