--- a/beauty-app/src/app/pages/deposit/deposit.page.html
+++ b/beauty-app/src/app/pages/deposit/deposit.page.html
@@ -132,7 +132,7 @@
               </ion-button>
             </ion-col>
         </ion-row>
-        <!-- <p class="ion-text-center dec" routerLink="/terms">Terms and conditions</p> -->
+        <p>{{res }}</p>
       </ion-col>
       <ion-col size="0" size-sm="0" size-md="3" size-lg="4"></ion-col>
     </ion-row>
