--- a/beauty-app/src/app/pages/admplans/admplans.page.scss
+++ b/beauty-app/src/app/pages/admplans/admplans.page.scss
@@ -21,3 +21,20 @@
 .txt-label{
     size:1.5rem;
 }
+.buttons-np{
+    position: relative;
+    left: 80px;
+}
+.btn-save{
+    width: 120px;
+    position: relative;
+    left: 10px;
+}
+.btn-details{
+    position: relative;
+    left: 34px;
+    width: 120px;
+}
+.space-btn{
+    padding-top: 30px;
+}
