--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -38,7 +38,9 @@
             Schedule Appointment
           </h1>
         </ion-text>
-        <ion-calendar [(ngModel)]="data" [type]="type" [format]="'YYYY-MM-DD'">
+        <ion-calendar [(ngModel)]="date"
+              [type]="type"
+              [format]="'YYYY-MM-DD'">
         </ion-calendar>
 
 
