--- a/beauty-app/src/app/components/popoverpost/popoverpost.component.html
+++ b/beauty-app/src/app/components/popoverpost/popoverpost.component.html
@@ -1,17 +1,7 @@
 <ion-list>
-  <ion-item>
-    <ion-label>
-      Guardar
+  <ion-item *ngFor="let item of options">
+    <ion-label color="{{item.color}}">
+      {{item.text}}
     </ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>
-      Compartir
-    </ion-label>
-  </ion-item>
-  <ion-item>
-  <ion-label color="danger">
-    Reportar
-  </ion-label>
-</ion-item>
 </ion-list>
