Design Payment final
final view on payment

--- a/beauty-app/src/app/components/purchase-success/purchase-success.component.scss
+++ b/beauty-app/src/app/components/purchase-success/purchase-success.component.scss
@@ -3,11 +3,18 @@
     text-align: center;
 }
 h3{
-    font-size: 30px;
+    font-size: 23px;
 }
 .p-1{
-    font-size: 20px;
+    font-size: 18px;
 }
-.p-1{
-    font-size: 15px;
+
+.center-page{
+    position: relative;
+    top: 10rem;
+}
+.btn-home{
+    position: relative;
+    top: 30px;
+    height: 46px;
 }
