--- a/beauty-app/src/app/components/profile-photos/profile-photos.component.html
+++ b/beauty-app/src/app/components/profile-photos/profile-photos.component.html
@@ -1,15 +1,7 @@
-<h2>Your plan: <span>3D Plan</span></h2> 
+<h2>Your plan: <span>{{plan.nombre}}</span></h2> 
 <main>
-  <p>Doggo ipsum long bois lotsa pats blep. What a nice floof ruff super chub very good spot, the neighborhood pupper lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
-  <p>Shoober shooberino adorable doggo many pats, heckin good boys many pats pupper wrinkler, corgo maximum borkdrive. A frighten puggo wow very biscit.</p>
-  <p>Big ol h*ck adorable doggo vvv smol borking doggo with a long snoot for pats big ol, he made many woofs doing me a frighten puggo wow very biscit, ruff fat boi ruff long doggo. </p>
-  <p>Long bois mlem I am bekom fat wrinkler puggo maximum borkdrive big ol pupper I am bekom fat, fluffer vvv adorable doggo lotsa pats snoot. I am bekom fat ur givin me a spook length boy wow very biscit very good spot.</p>
-  <p>Doggo ipsum long bois lotsa pats blep. What a nice floof ruff super chub very good spot, the neighborhood pupper lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
+  <p *ngFor="let item of list" >
+    <b>{{item.titulo}} - {{item.fecha}} {{item.hora}}</b> <br>
+    {{item.descripcion}}
+  </p>
 </main>
-<!-- <ion-grid class="grid-photos">
-  <ion-row>
-    <ion-col class="padding-img" *ngFor="let item of images" size="6" size-md="4" size-lg="4">
-      <img src="assets/img/{{item}}" alt="">
-    </ion-col>
-  </ion-row>
-</ion-grid> -->
