--- a/beauty-app/src/app/pages/contact/contact.page.html
+++ b/beauty-app/src/app/pages/contact/contact.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+
 <ion-content>
   <ion-grid>
     <ion-row>
@@ -32,7 +32,7 @@
     </ion-row>
     <ion-row>
       <ion-col size="10" >
-        <ion-button type='submit'class='button-contact' routerLink="/admplans">
+        <ion-button type='submit'class='button-contact' routerLink="/admrooms">
           Send
         </ion-button>
         </ion-col>
