--- a/beauty-app/src/app/components/profile-photos/profile-photos.component.scss
+++ b/beauty-app/src/app/components/profile-photos/profile-photos.component.scss
@@ -1,3 +1,25 @@
+// Message
+.center{
+  display: flex;
+  margin: 0 auto;
+}
+.ajust{
+  padding-top: 2rem;
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+.recom{
+  padding-top: 4rem;
+  color: aliceblue;
+  text-align: center;
+  font-size: 30px;
+}
+.visit-site{
+  padding-top: 1rem;
+  color: aliceblue;
+  text-align: center;
+  font-size: 20px;
+}
 .grid-photos{
     background: aliceblue;
 }
