--- a/beauty-app/src/app/components/profile-photos/profile-photos.component.html
+++ b/beauty-app/src/app/components/profile-photos/profile-photos.component.html
@@ -1,7 +1,22 @@
-<h2>Your plan: <span>{{plan.nombre}}</span></h2> 
-<main>
-  <p *ngFor="let item of list" >
-    <b>{{item.titulo}} - {{item.fecha}} {{item.hora}}</b> <br>
-    {{item.descripcion}}
-  </p>
-</main>
+<div *ngIf="view === 1" >
+  <h2>Your plan: <span>{{plan.nombre}}</span></h2> 
+  <main>
+    <p *ngFor="let item of list" >
+      <b>{{item.titulo}} - {{item.fecha}} {{item.hora}}</b> <br>
+      {{item.descripcion}}
+    </p>
+  </main>
+</div>
+<div *ngIf="view === 2" >
+  <div class="recom">
+    You haven't purchased any plans yet
+  </div>
+  <div class="visit-site">
+    Visit our plans section
+  </div>
+  <div class="ajust">
+    <ion-button routerLink="/plans" class="center" color="primary-bl">
+      View Plans
+    </ion-button>
+  </div>
+</div>
