--- a/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
+++ b/beauty-app/src/app/pages/plans-detail/plans-detail.page.html
@@ -1,20 +1,3 @@
-<!-- <app-header titulo="BeautyLab Plans">
-</app-header> -->
-
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <img routerLink="/tabs/home" src="../../../assets/img/horizontal_logo.png" class="img-header">
-    <ion-buttons slot="end">
-      <ion-avatar routerLink="/profile">
-        <img class="header-style" src="/assets/img/PROFILEPICTURE.png">
-      </ion-avatar>
-
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header> -->
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
@@ -25,9 +8,7 @@
             <h1 class="ion-text-center home">{{plans.nombre}}</h1>
           </ion-text>
         </div>
-
         <img class="plans" src="assets/img/pyp/{{plans.img_plan}}" alt="" srcset="">
-
         <br>
         <ion-text color="light">
           <h2 class="ion-text-center txtdescription">Description Plan: <br> {{plans.descripcion}}</h2>
@@ -38,15 +19,13 @@
             Schedule Appointment
           </h1>
         </ion-text>
-        <ion-calendar [(ngModel)]="date"
-              [type]="type"
-              [format]="'YYYY-MM-DD'">
+        <ion-calendar [(ngModel)]="date" [type]="type" [format]="'YYYY-MM-DD'">
         </ion-calendar>
 
 
         <ion-row>
           <ion-col size="6">
-            <h6 class="steps" (click)="backStep()" >Back</h6>
+            <h6 class="steps" (click)="backStep()">Back</h6>
           </ion-col>
           <ion-col size="6">
             <h6 class="steps r" (click)="nextStep()">Next</h6>
