--- a/beauty-app/src/app/pages/deposit/deposit.page.scss
+++ b/beauty-app/src/app/pages/deposit/deposit.page.scss
@@ -10,7 +10,7 @@
     margin-bottom: 0;
     text-align: center;
 }
-h2,h3,h4,h6,p{
+h3,h4,h6,p{
     color: aliceblue;
 }
 
@@ -31,8 +31,10 @@ h3{
 }
 h4{
     font-family: inherit;
-    padding-top: 1.5rem;
-    font-size: 30px;
+    font-size: 22px;
+    color: black;
+    position: relative;
+    left: 48px;
 }
 h6{
     text-decoration: underline;
@@ -48,4 +50,7 @@ h6{
     border-radius: 40px;
     width: 100%;
     height: 50px;
+}
+.nopadding{
+    padding:0;
 }
