--- a/beauty-app/src/app/pages/admplans/admplans.page.html
+++ b/beauty-app/src/app/pages/admplans/admplans.page.html
@@ -23,25 +23,27 @@
             <ion-item>
               <ion-label position="stacked" class="txt-label">Plan Name:</ion-label>
               <ion-input formControlName="nombre" type="text" name="nombre" 
-                class="input-contact"
-                [ngClass]="{ 'is-invalid': submitted && f.title.errors }"></ion-input>
-                <div *ngIf="submitted && f.nombres.errors" class="invalid-feedback">
-                  <div *ngIf="f.nombres.errors.required">name is required</div>
-              </div>                
+                class="form-control" placeholder="Name" [formGroup]="form" >
+              </ion-input>             
             </ion-item>
             <ion-item>
               <ion-label position="stacked">Description Plan:</ion-label>
-              <ion-input formControlName="descripcion" type="text" name="descripcion" class="input-contact"></ion-input>
+              <ion-input formControlName="descripcion" placeholder="Description"
+                type="text" name="descripcion" class="form-control" [formGroup]="form" >
+              </ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="stacked">Plan Value:</ion-label>
-              <ion-input formControlName="valor"  [formGroup]="form"  type="text" name="valor" class="input-contact"></ion-input>
+              <ion-input formControlName="valor"  [formGroup]="form"  
+                type="text" name="valor" class="form-control" placeholder="Value">
+              </ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="stacked">Room Type:</ion-label>
-              <select name="idDepartamento" formControlName="roomType" class="form-control col-md-6" >
-                <option *ngFor="let item of roomsType" value={{item.idTipoHabitacion}} >{{item.nombre}}</option>
-              </select> 
+              <ion-select formControlName="idRoomType" name="idRoomType" class="form-control" [formGroup]="form"  >
+                <ion-select-option value="" selected>Select Room Type</ion-select-option>
+                <ion-select-option *ngFor="let item of roomsType" value={{item.idTipoHabitacion}}>{{item.nombre}}</ion-select-option>
+              </ion-select>
             </ion-item>
             <ion-item class="space-btn">
               <ion-button type="submit" color="dark" class="btn-save"expand="full" size="large">Save</ion-button>
