--- a/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
+++ b/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back" defaultHref="/homeadmin"></ion-back-button>
+    </ion-buttons>
     <ion-title>Beauty Lab Procedures</ion-title>
   </ion-toolbar>
 </ion-header>
