--- a/beauty-app/src/app/pages/homeadmin/homeadmin.page.html
+++ b/beauty-app/src/app/pages/homeadmin/homeadmin.page.html
@@ -10,4 +10,16 @@
         <ion-icon slot="start" [name]="c.icon"></ion-icon>
         <ion-label>{{ c.name }}</ion-label>
     </ion-item>
+    <hr>
+    <br><br>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="2" size-lg="2" size-md="2"></ion-col>
+        <ion-col size="8" size-lg="8" size-md="8">
+          <img src="../../../assets/img/horizontal_logo.png" alt="" class="img-admin">
+        </ion-col>
+        <ion-col size="2" size-lg="2" size-md="8"></ion-col>
+      </ion-row>
+      </ion-grid>
+    
 </ion-content>
